--- a/www/style.css
+++ b/www/style.css
@@ -10,11 +10,7 @@ header > button
 		padding:10px;
 	}
 
-main 
-	{
-		transition:all .5s;
-	}
-
+/*
 .menu	
 	{
 		position:fixed;
@@ -72,25 +68,24 @@ main
 		transition:all .5s;
 		background-color:rgba(25,25,25,.5);
 	}
-
+*/
 .message 
 	{
 		text-align:center;
 	}
-	
 .message > img
 	{
 		max-height:100px;
-		margin-bottom:15px;
+		max-width: 80%;
+		padding:15px 0;
 	}
-
 .message > div
 	{
 		padding:25px 0;
 		background:rgb(245,245,245);
 		box-shadow:1px 2px 15px rgba(25,25,25,.3);
 	}
-	
+
 .contact
 	{
 		padding:5px 20px;
@@ -106,7 +101,33 @@ main
 	{
 		position:absolute; top:1px; left:5px;
 	}
-
+	
+	
+.tools
+	{
+		
+	}
+.tools > div
+	{
+		padding:25px 0;
+		text-align:center;
+		background:rgb(245,245,245);
+		box-shadow:1px 2px 15px rgba(25,25,25,.3);
+	}
+.tools > label
+	{
+		position:relative;
+		display:block;
+		margin:20px 0;
+		padding:15px 95px;
+	}
+.tools > label > button
+	{
+		position:absolute; 
+		top:1px; left:25px;
+	}	
+	
+	
 .local
 	{
 		padding:10px 10px 30px 10px;
@@ -130,4 +151,23 @@ main
 	{
 		display:block;
 		text-decoration:underline;
+	}
+
+
+.info
+	{
+		padding:15px 0;
+		text-align:center;
+		background-color:rgb(245,245,245);
+	}
+.info > img
+	{
+		max-width:100px;
+		border-radius:50%;
+		margin:20px 0;
+	}
+.info > div
+	{
+		font-size:14px;
+		color:rgb(100,100,100);
 	}
